# sportsdb

./: .env.example  .flake8  .gitignore  Makefile  README.md  mk  pyproject.toml
server/: .python-version  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
server/app/: db.py  logging_config.py  main.py  settings.py
server/app/api/: main.py
server/app/models/: __init__.py  base.py  platform.py
server/migrations/: env.py
server/migrations/versions/: 23c1ffc409ae_smoke_autogen.py  93f84a432e5d_main_platform_registries.py  e7eea473be7b_baseline.py
server/platform/: Dockerfile.dev  manage.py  requirements.txt
server/platform/platform_api/: admin.py  api.py  db_schema.sql  models.py
server/platform/platform_api/admin/: __init__.py  entities.py  geo.py  inbox.py
server/platform/platform_api/migrations/: 0001_initial.py  0002_using_charfield_not_textfield.py  0003_add_presence_tables.py  0004_minor_meta_updates.py  0005_edit_requests_inbox_created.py  (+8 more)
server/platform/platform_service/: asgi.py  settings.py  urls.py  wsgi.py
server/scripts/: create_vertical.sh
server/scripts/create_vertical/: context.sh  django.sh  infra.sh  main.sh  templates.sh
server/scripts/modelgen/: .gitignore  __init__.py  common.py  main.py  parsers.py  tables.py
server/shared/: db_init.sh  pyproject.toml
server/shared/api_contract/: __init__.py  codes.py  errors.py  factory.py  ninja.py  request_id.py  routing.py  schemas.py  testing.py
server/shared/utils/: admin.py  models.py  routing.py  testing.py
server/verticals/volley/: Dockerfile.dev  manage.py
(+56 files in other folders)
