[project]
name = "server"
version = "0.1.0"
description = "Django SPDB apps"
readme = "../docs/README.md"
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = ["shared.utils.admin"]
disable_error_code = ["misc"]

[tool.black]
line-length = 192
target-version = ["py312"]